--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 4fr;
   border: 3px solid orangered;
 }
@@ -21,4 +21,16 @@
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   border: 3px solid orangered;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
 }
+
+.dashboard_heading {
+  display: flex;
+}
+
+.dashboard_heading h1 {
+  margin: 0;
+}
+
+.dashboard;
