--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -27,10 +32,32 @@
 
 .dashboard_heading {
   display: flex;
+  margin: 20px;
 }
 
 .dashboard_heading h1 {
   margin: 0;
 }
 
-.dashboard;
+.dash_icons {
+  display: grid;
+}
+
+.dashboard_first {
+  display: grid;
+  grid-template-columns: auto 3fr;
+  grid-template-rows: repeat(9, 1fr);
+  gap: 10px;
+  margin: 27px;
+}
+
+.dash_sections {
+  display: grid;
+  align-items: center;
+  font-size: large;
+}
+
+.dash_icons img {
+  width: 33px;
+  height: 33px;
+}
