--- a/style.css
+++ b/style.css
@@ -2,32 +2,37 @@
   padding: 0;
   margin: 0;
   border: 0;
+  font-family: "Anek Telugu", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 4fr;
-  border: 3px solid orangered;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr 5fr;
 }
 
 .dashboard {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  border: 3px solid orangered;
+  background-color: #369871b5;
+  color: white;
 }
 
 .header {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  border: 3px solid orangered;
+
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  padding-bottom: 30px;
 }
 
-.projects {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  border: 3px solid orangered;
+.content {
   display: grid;
   grid-template-columns: 3fr 1fr;
+  grid-row: 2 / 3;
+  padding: 30px;
+  background-color: #eee8dfcd;
 }
 
 .dashboard_heading {
@@ -46,7 +51,6 @@
 .dashboard_first {
   display: grid;
   grid-template-columns: auto 3fr;
-  grid-template-rows: repeat(9, 1fr);
   gap: 10px;
   margin: 27px;
 }
@@ -55,9 +59,153 @@
   display: grid;
   align-items: center;
   font-size: large;
+  padding-bottom: 5px;
 }
 
-.dash_icons img {
+.dash_icons img,
+.search_section img,
+.notification_section img:not(.profile_pic),
+.card img {
   width: 33px;
   height: 33px;
+  padding-bottom: 10px;
+}
+
+.dash_icons img,
+.dashboard_heading img {
+  filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(291deg)
+    brightness(103%) contrast(101%);
+}
+
+.settings {
+  padding-top: 40px;
+}
+
+.header_first {
+  display: inline-grid;
+  grid-template-columns: 2fr 2fr;
+  margin: 0;
+  padding: 0;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.search {
+  background: orangered;
+  height: 30px;
+  min-width: 400px;
+  border-radius: 10px;
+  flex: 1;
+}
+
+.search_section {
+  display: flex;
+  align-items: flex-start;
+  padding-left: 30px;
+  gap: 10px;
+  padding-top: 30px;
+}
+
+.notification_section {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  gap: 10px;
+  font-size: large;
+  padding-right: 35px;
+}
+
+.profile_pic {
+  border: 1px solid #ddd;
+  padding: 8px;
+  border-radius: 40px;
+  background-color: rgba(172, 186, 194, 0.516);
+  margin-top: 8px;
+  width: 60px;
+  height: 60px;
+}
+
+.profile_pic:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+.header_second {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-row: 2 / 3;
+}
+
+.greeting_section {
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  gap: 10px;
+  padding-top: 10px;
+  font-size: large;
+}
+.greeting {
+  padding-top: 9px;
+}
+
+.button_section {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  gap: 15px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+}
+
+.btn {
+  background-color: #369871b5;
+  border: none;
+  border-radius: 23px;
+  color: white;
+  width: 130px;
+  height: 43px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgba(76, 175, 79, 0.443);
+}
+
+.cards_section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 30px;
+  row-gap: 30px;
+  justify-content: flex-start;
+}
+
+.card {
+  padding: 20px 20px;
+  display: grid;
+  max-width: 450px;
+  background-color: white;
+  border-radius: 15px;
+  border: 2px solid rgba(95, 89, 89, 0.371);
+  border-left: 10px solid orangered;
+  margin: 0;
+}
+
+.card_info h3 {
+  padding-bottom: 10px;
+}
+
+.card_icons {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 50px;
+  padding-right: 8px;
+  column-gap: 5px;
+}
+
+.card_icons img:hover {
+  cursor: pointer;
 }
