--- a/style.css
+++ b/style.css
@@ -123,17 +123,17 @@
 
 .profile_pic {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 2px;
   border-radius: 40px;
-  background-color: rgba(172, 186, 194, 0.516);
+  background-color: white;
   margin-top: 8px;
-  width: 60px;
-  height: 60px;
+  width: 66px;
+  height: 66px;
 }
 
 .first {
-  width: 50px;
-  height: 50px;
+  width: 55px;
+  height: 55px;
 }
 
 .profile_pic:hover {
@@ -237,7 +237,7 @@
 .announcements_trending {
   display: grid;
   justify-content: end;
-  grid-template-rows: auto 2fr auto 2fr;
+  grid-template-rows: repeat(4, auto);
 }
 
 .announcement_card {
@@ -251,19 +251,32 @@
 }
 
 .trending_section {
-  display: grid;
   grid-template-columns: 1fr 3fr;
   height: fit-content;
-  row-gap: 45px;
   margin-top: 20px;
+  align-content: space-between;
 }
 
 .trending_info {
   display: grid;
-  row-gap: 20px;
-  padding-top: 20px;
+  row-gap: 28px;
 }
 
 .announcements_trending h3 {
   padding-left: 7px;
+}
+
+.trending_icon img {
+  padding: 0;
+  margin: 0;
+}
+
+.trending_icon {
+  display: grid;
+  align-content: space-between;
+  row-gap: 20px;
+}
+
+.user_info {
+  padding: 0;
 }
